# Devr.AI

./: .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ENHANCED_FAQ_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  SECURITY_IMPLEMENTATION.md  env.example  pyproject.toml  pytest.ini  start.py
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  dependencies.yml  docker.yml  release.yml  security.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  event_bus_init.py  main.py  minimal-requirements.txt  requirements.txt  routes.py  test_agent_state.py  test_server.py
backend/app/agents/: state.py
backend/app/agents/devrel/: agent.py  tool_wrappers.py
backend/app/agents/devrel/github/: github_toolkit.py
backend/app/agents/devrel/github/prompts/: general_github_help.py  intent_analysis.py
backend/app/agents/devrel/github/tools/: contributor_recommendation.py  search.py
backend/app/agents/devrel/nodes/: classify_intent_node.py  gather_context.py  gather_context_node.py  generate_response_node.py  handle_faq_node.py  handle_onboarding_node.py  handle_technical_support_node.py  handle_web_search_node.py  react_supervisor.py
backend/app/agents/devrel/nodes/handlers/: faq.py  organizational_faq.py  technical_support.py  web_search.py
backend/app/agents/devrel/prompts/: faq_prompt.py  organizational_faq_prompt.py  react_prompt.py  response_prompt.py  search_prompt.py  summarization_prompt.py
backend/app/agents/devrel/tools/: enhanced_faq_tool.py  faq_tool.py
backend/app/agents/devrel/tools/search_tool/: ddg.py  duckduckgo_tool.py
backend/app/agents/devrel/workflows/: technical_support.py
backend/app/agents/shared/: classification_router.py
backend/app/api/: router.py
backend/app/api/routes/: faq.py
backend/app/api/v1/: health.py  integrations.py  repositories.py  test_rate_limit.py
backend/app/classification/: classification_router.py  prompt.py
backend/app/core/: exceptions.py  logging_config.py  middleware.py  rate_limiter.py
backend/app/core/config/: settings.py
backend/app/core/events/: enums.py  event_bus.py  faq_event.py
backend/app/core/handler/: faq_handler.py
backend/app/core/orchestration/: agent_coordinator.py  queue_manager.py
backend/app/database/weaviate/: client.py  operations.py
backend/app/database/weaviate/scripts/: create_schemas.py  populate_db.py
backend/app/middleware/: __init__.py  cors.py  rate_limit.py  validation.py
backend/app/models/: models.py
backend/app/routes/: post.py
backend/app/schemas/: faq.py  schema.py
backend/app/services/: ai_services.py  faq_assistant.py  github_downloader.py  rag_retriever.py  text_embedder.py  vector_db.py  vector_db.sql
backend/app/services/codegraph/: repo_service.py
backend/app/services/embedding_service/: service.py
backend/app/services/faq/: faq_assistant.py
backend/app/services/github/: github_downloader.py  issue_processor.py
backend/app/services/rag/: rag_retriever.py  text_embedder.py  vector_db.py  vector_db.sql
backend/app/services/vector_db/: service.py
backend/bots/discord_bot/: __init__.py  api_gateway.py  bot.py
backend/bots/github_bot/: __init__.py
backend/bots/slack_bot/: __init__.py  config.env  slack_requirement.txt
backend/integrations/discord/: bot.py  cogs.py
backend/tests/: test_error_handling.py
backend/tests/services/faq/: test_faq_assistant.py
backend/tests/services/github/: test_github_downloader.py
backend/tests/services/rag/: test_rag_retriever.py  test_text_embedder.py  test_vector_db.py
docs/: ERROR_HANDLING.md  INSTALL_GUIDE.md
frontend/: .env example  .prettierignore  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
frontend/src/: App.css  App.js  App.tsx  demo.js  index.css  test-setup.ts
frontend/src/components/auth/: logout.js  reset.js  signin.js  signup.js
frontend/src/components/dashboard/: AIAssistantActivity.tsx  ContributorActivity.tsx  PlatformDistribution.tsx  RecentContributors.tsx  RecentIssues.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/components/home/: home.js  mainhomepage.js
frontend/src/components/integration/: BotIntegration.tsx  IntegrationModal.tsx
frontend/src/components/navbar/: navbar.js
frontend/src/components/pages/: ForgotPasswrdPage.tsx  LoginPage.tsx  ProfilePage.tsx  ResetPasswrdPage.tsx  SignUpPage.tsx
frontend/src/lib/: api.ts
frontend/src/services/: api.js
landing/: pnpm-lock.yaml
landing/src/: index.css
tests/: test_embedding_service.py  test_supabase.py  tests_main.py
